--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DaTec</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./DaTec/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
   <body>
 
@@ -36,23 +36,26 @@
         </div>
       </nav>
 
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non ea animi dignissimos. Voluptatibus quia architecto ipsa vitae rerum, saepe, dolorem, libero eos obcaecati provident consectetur et fugiat minima? Labore!
-      Reprehenderit, nihil! A, perferendis nulla similique inventore, sapiente unde odit quidem veritatis, harum expedita mollitia enim ex minus tempora fuga recusandae accusamus cupiditate eaque perspiciatis deleniti aliquid quasi vitae. Quia?
-      Voluptatibus accusantium officiis fuga molestiae fugit aliquid natus, deserunt perspiciatis similique asperiores dolor sed ipsum aspernatur ad quod commodi minima, tempore iure voluptates suscipit mollitia id corrupti expedita? Harum, voluptatum?
-      Tenetur ullam, dolorem ipsum beatae dolor molestiae modi ipsa unde sint animi rerum sit officiis deserunt laboriosam illo mollitia fuga, iusto itaque esse quo sequi possimus enim! Non, necessitatibus dignissimos.
-      Illum iusto numquam tempore suscipit sequi ex ea commodi provident nostrum iste, voluptate laborum, animi repellat quas. Voluptate aliquid, expedita voluptatibus assumenda corrupti voluptas fugiat repellat quas hic libero impedit!
-      Suscipit laudantium voluptatum facilis consequuntur odio explicabo reprehenderit iste cumque quas, pariatur doloremque quidem incidunt aliquid, natus quae voluptates voluptatibus ducimus labore asperiores! Aliquid iste sed, placeat delectus deserunt amet.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptatibus praesentium sed aliquid delectus, quia facere modi nihil sint numquam consectetur nemo expedita placeat vel consequuntur ducimus reprehenderit saepe sit!
-      Debitis, facilis illum officia sapiente reiciendis eveniet eius neque minima a, magnam nisi, nihil soluta ad rem obcaecati earum facere quia voluptatibus quidem. Quidem quos saepe expedita consequuntur inventore facilis.
-      Veritatis, ex! Quae ea et hic distinctio, rem modi dolorem error minima expedita, placeat enim saepe impedit ducimus officiis quia debitis nihil vel consectetur quidem in quasi aliquid doloremque ullam.
-      Repudiandae optio facilis labore vero ipsa voluptate autem reprehenderit praesentium voluptatibus voluptatem tenetur odit laboriosam a possimus quidem accusamus aut rerum, quia quisquam voluptas quas. Unde sunt quisquam iste ipsam.
-      Quasi beatae deserunt perferendis quis consequatur doloremque, explicabo, eveniet tenetur inventore harum velit, similique provident tempore. Ipsum minus adipisci excepturi ipsam nesciunt ducimus mollitia hic, dolore neque rem, libero illum!
-      Laborum delectus molestiae dolores eaque, incidunt quaerat perferendis. Quas cupiditate, vel cumque vero reprehenderit molestiae praesentium dignissimos similique in, consequatur illum dicta enim rerum quisquam odit quia esse deleniti aperiam.
-      Architecto earum culpa vitae cumque asperiores velit, nemo error dolores illum adipisci iste, animi, assumenda voluptas aperiam. Reiciendis voluptate culpa, optio quos cum impedit modi earum aliquam itaque a quam.
-      Iste dolor voluptate expedita! Totam enim quae odio iusto facere est asperiores perspiciatis quas reprehenderit? Odio, ipsum? Voluptatem ex excepturi provident, quaerat nemo odio deleniti tempore, eos magni illo officiis!
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, iste a voluptate repellat nobis nam doloribus libero minus porro animi magni voluptas. Repellendus esse illo dicta? Rerum dolorum esse in!
-      Aperiam cumque ex hic excepturi quas assumenda dignissimos nobis architecto dicta natus officiis, quia accusantium reiciendis non ipsum laborum maiores voluptas! Amet velit ipsum consequuntur dolorem explicabo voluptatum soluta dolorum.
-      Possimus recusandae, ullam unde est doloremque neque fugiat nobis iusto assumenda deserunt impedit maxime fugit, consectetur minima eos asperiores. Quis ipsum minima quas sit quia explicabo et ut, perspiciatis laborum!
+      <!-- Carousel -->
+      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active data-bs-interval=1000">
+            <img src="./img/slide2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item data-bs-interval=1000">
+            <img src="./img/slide3.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      
       <!-- Fondo curvo -->
       <section>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#1b2a4e" fill-opacity="1" d="M0,96L120,106.7C240,117,480,139,720,133.3C960,128,1200,96,1320,80L1440,64L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
@@ -64,6 +67,6 @@
         <p class="fs-5 px-3 pt-3">DaTec &copy; Todos los derechos reservados.</p>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="./DaTec/js/snippets.js"></script>
+    <script src="./js/snippets.js"></script>
 </body>
 </html>
