Se agregó introduccion a servicios

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>
           </div>
         </div>
-      </nav>
+     </nav>
 
       <!-- Carousel -->
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -56,6 +56,12 @@
         </button>
       </div>
       
+      <!-- Introduccion a servicios-->
+      <section id="intro" class="d-flex flex-column justify-content-center pt-5 text-center w-50 m-auto">
+        <h1 class="p-3 fs-2 border-top border-2">Una agencia única para todas tus necesidades de <span>Marketing Digital</span></h1>
+        <p class="p-3 fs-4"><span class="text-primary">DaTec</span> es la agencia donde te ayudamos a establecer tu presencia online. SEO, páginas web, tiendas virtuales, redes sociales y demás.</p>
+      </section>
+
       <!-- Fondo curvo -->
       <section>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#1b2a4e" fill-opacity="1" d="M0,96L120,106.7C240,117,480,139,720,133.3C960,128,1200,96,1320,80L1440,64L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
